--- a/lldb/Makefile
+++ b/lldb/Makefile
@@ -8,7 +8,7 @@ all:
 	make todo
 
 todo:
-	@grep -n ^[[:space:]]*_[[:space:]]*=[[:space:]][[:alnum:]] *.go || true
+	@grep -n ^[[:space:]]*_[[:space:]]*=[[:space:]][[:alpha:]][[:alnum:]]* *.go || true
 	@grep -n TODO *.go || true
 	@grep -n BUG *.go || true
 	@grep -n println *.go || true
