--- a/lldb/Makefile
+++ b/lldb/Makefile
@@ -14,7 +14,8 @@ todo:
 	@grep -n println *.go || true
 
 clean:
-	rm -f *~ cov cov.html bad-dump good-dump lldb.test old.txt new.txt
+	rm -f *~ cov cov.html bad-dump good-dump lldb.test old.txt new.txt \
+		test-acidfiler0-*
 
 gocov:
 	gocov test $(COV) | gocov-html > cov.html
