Fix buffer sharing bug

--- a/lldb/Makefile
+++ b/lldb/Makefile
@@ -20,5 +20,5 @@ clean:
 	rm -f *~ cov cov.html bad-dump good-dump lldb.test old.txt new.txt \
 		test-acidfiler0-* _test.db _wal
 
-gocov:
-	gocov test $(COV) | gocov-html > cov.html
+cover:
+	t=$(shell tempfile) ; go test -coverprofile $$t && go tool cover -html $$t && unlink $$t
