--- a/dbm/Makefile
+++ b/dbm/Makefile
@@ -1,3 +1,7 @@
+# Copyright 2014 The dbm Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style
+# license that can be found in the LICENSE file.
+
 .PHONY: all clean editor later mem nuke todo
 
 grep=--include=*.go
@@ -7,6 +11,7 @@ all: editor
 	go build
 	go vet
 	go install
+	golint .
 	make todo
 
 clean:
